function(add_example target_name)
    add_executable(${target_name} "${target_name}.c")
    target_link_libraries(${target_name} PUBLIC raygpu)
endfunction()
function(add_cpp_example target_name)
    add_executable(${target_name} "${target_name}.cpp")
    target_link_libraries(${target_name} PUBLIC raygpu)
endfunction()

add_example(core_window)
add_example(core_shapes)
add_example(core_vsync_fullscreen)
add_example(core_msaa)
add_example(textures_generate)
add_example(core_camera2d)